--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "vite",
+    "server": "node server/index.js",
     "build": "tsc && vite build",
     "start": "node server/index.js",
     "preview": "vite preview"
@@ -14,6 +16,7 @@
     "@fontsource/orbitron": "^5.0.18",
     "axios": "^1.6.7",
     "canvas-confetti": "^1.9.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
